--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "firebase": "^10.1.0",
     "pinia": "^2.1.3",
     "primeflex": "^3.3.1",
     "vue": "^3.3.4",
